working on shows apis
